# FP-DCF

./: .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: 300347.sz_market_implied_growth_single_stage.json  300347.sz_market_implied_growth_single_stage.output.json  300347.sz_market_implied_growth_three_stage.json  300347.sz_market_implied_growth_three_stage.output.json  300347.sz_market_implied_growth_two_stage.json  300347.sz_market_implied_growth_two_stage.output.json  AAPL_two_stage_manual_fundamentals_market_implied.json  AAPL_two_stage_manual_fundamentals_market_implied.output.json  AAPL_two_stage_provider_market_implied.json  NVDA_three_stage_manual_fundamentals_market_implied.json  NVDA_three_stage_manual_fundamentals_market_implied.output.json  NVDA_three_stage_provider_market_implied.json  cn_moutai_single_stage.json  cn_moutai_single_stage.output.json  cn_tencent_two_stage.json  cn_tencent_two_stage.output.json  sample_input.json  sample_input_market_implied_growth_single_stage.json  sample_input_market_implied_growth_three_stage.json  sample_input_market_implied_growth_two_stage.json  sample_input_yahoo.json  sample_output.json  sample_output_market_implied_growth_single_stage.json  sample_output_market_implied_growth_three_stage.json  sample_output_market_implied_growth_two_stage.json
fp_dcf/: __init__.py  cli.py  engine.py  market_implied_growth.py  normalize.py  plotting.py  schemas.py  sensitivity.py  sensitivity_cli.py
fp_dcf/providers/: akshare_baostock.py  yahoo.py
references/: methodology.md
tests/: test_akshare_baostock_provider.py  test_cli.py  test_engine.py  test_implied_growth.py  test_market_implied_growth.py  test_metadata.py  test_normalize.py  test_schemas.py  test_sensitivity.py  test_sensitivity_cli.py  test_yahoo_integration.py
