[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fp-dcf"
version = "0.1.0"
description = "First-principles DCF skill scaffold for LLM agents and quantitative research workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "yfinance>=0.2.54",
]
keywords = ["dcf", "valuation", "finance", "llm", "mcp", "yfinance"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools]
packages = ["fp_dcf"]

[tool.pytest.ini_options]
testpaths = ["tests"]

