[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fp-dcf"
version = "0.1.0"
description = "First-principles DCF skill scaffold for LLM agents and quantitative research workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "yfinance>=0.2.54",
]
keywords = ["dcf", "valuation", "finance", "llm", "mcp", "yfinance"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
fp-dcf = "fp_dcf.cli:main"

[tool.setuptools]
[tool.setuptools.packages.find]
include = ["fp_dcf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: live network-backed integration tests",
]
