[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fp-dcf"
version = "0.1.0"
description = "First-principles DCF skill scaffold for LLM agents and quantitative research workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "yfinance>=0.2.54",
  "matplotlib>=3.8",
]
keywords = ["dcf", "valuation", "finance", "llm", "mcp", "yfinance"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
# Backward-compatible alias. The default runtime now includes matplotlib
# because the main CLI renders PNG/SVG sensitivity charts by default.
viz = [
  "matplotlib>=3.8",
]

[project.scripts]
fp-dcf = "fp_dcf.cli:main"
fp-dcf-sensitivity = "fp_dcf.sensitivity_cli:main"

[tool.setuptools]
[tool.setuptools.packages.find]
include = ["fp_dcf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: live network-backed integration tests",
]
